# Disc_Simulator

DiscoSimulator/DiscoSimulator/: CMakeLists.txt  Makefile  README.md  main.cpp  main_servidor.cpp
DiscoSimulator/DiscoSimulator/backend/: Disco.cpp  Disco.hpp  DiscoFactory.cpp  DiscoFactory.hpp  Exceptions.hpp  HDD.cpp  HDD.hpp  HttpServer.cpp  HttpServer.hpp  JsonUtil.cpp  JsonUtil.hpp  Logger.cpp  Logger.hpp  NVMe.cpp  NVMe.hpp  SSDSata.cpp  SSDSata.hpp  Simulador.cpp  Simulador.hpp
DiscoSimulator/DiscoSimulator/frontend/: Colores.hpp  ConsoleUI.cpp  ConsoleUI.hpp
DiscoSimulator/DiscoSimulator/tests/: test_disco.cpp
DiscoSimulator/DiscoSimulator/web/: index.html
